--- a/src/main/webapp/reportInstitution/report_cash_category_without_pro_day.xhtml
+++ b/src/main/webapp/reportInstitution/report_cash_category_without_pro_day.xhtml
@@ -53,6 +53,7 @@
                                          pharmacywsc:pharmacywsc,
                                          inward_collection1:inward_collection1,
                                          agent_collection:agent_collection,
+                                         collecting_centre_collection:collecting_centre_collection,
                                          credit_collection:credit_collection,
                                          credit_collection_inward:credit_collection_inward,
                                          credit_collection_pharmacy:credit_collection_pharmacy,
