--- a/src/main/webapp/reportInstitution/report_own.xhtml
+++ b/src/main/webapp/reportInstitution/report_own.xhtml
@@ -35,7 +35,8 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Report By Bill" action="report_opd_daily_summery_credit_department_by_bill" />
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Report By Bill(With Letter)" action="report_opd_credit_bill_by_credit_company_with_letter" />
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Credit Company Break Down" action="report_credit_category" /> 
-
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Report Credit Bill(OPD/Pharmacy/Inward)" action="/credit/credit_bill_all" /> 
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Report Credit Bill Payment(OPD/Pharmacy/Inward)" action="/inward/inward_search_balance_payment_1" /> 
                                     </h:panelGrid>
                                 </p:panel>
                                 <p:panel header="10) VAT Report" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"   >
