--- a/src/main/webapp/search_bill.xhtml
+++ b/src/main/webapp/search_bill.xhtml
@@ -24,6 +24,9 @@
 
                                 <h:outputLabel value="BHT No"/>
                                 <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.bhtNo}" />
+                                
+                                <h:outputLabel value="Bill ID"/>
+                                <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.refBillNo}" />
 
                                 <p:commandButton id="btnSearch" ajax="false" value="Search" action="#{searchController.createSearchBill()}"/>
 
