--- a/src/main/webapp/channel/channel_booking_past.xhtml
+++ b/src/main/webapp/channel/channel_booking_past.xhtml
@@ -440,7 +440,9 @@
                                 </div>
                                 <div>
                                     <h:panelGroup rendered="#{sessionController.institutionPreference.channelBillPaperType eq 'FiveFivePaper' and (sessionController.institutionPreference.applicationInstitution eq 'Ruhuna')}" >
-                                        <ch:channelRecipt_ruhunu bill="#{channelBillController.billSession.billItem.bill}" dup="false"/>
+                                        <!--<ch:channelRecipt_ruhunu bill="#{channelBillController.billSession.billItem.bill}" dup="false"/>-->
+                                        <ch:channelRecipt_ruhunu_new bill="#{channelBillController.billSession.billItem.bill}" dup="true" hos="true" />
+                                        <ch:channelRecipt_ruhunu_new bill="#{channelBillController.billSession.billItem.bill}" dup="true" hos="false" />
                                     </h:panelGroup>
                                 </div>
                                 <div >
@@ -637,10 +639,15 @@
                                         <h:panelGroup id="panelAddedBillPrintSettle" styleClass="noBorder" >
                                             <div >
                                                 <h:panelGroup rendered="#{sessionController.institutionPreference.opdBillPaperType eq 'FiveFivePaper'}">
-                                                    <h:panelGroup rendered="#{!sessionController.institutionPreference.pharmacyBillPrabodha}" > 
+                                                    <h:panelGroup rendered="#{!sessionController.institutionPreference.pharmacyBillPrabodha and (sessionController.institutionPreference.applicationInstitution ne 'Ruhuna')}" > 
                                                         <ch:channelRecipt bill="#{channelBillController.billSession.billItem.bill}" dup="false"/>
                                                         <ch:channelRecipt bill="#{channelBillController.billSession.billItem.bill}" dup="false"/>
                                                     </h:panelGroup>
+                                                </h:panelGroup>
+                                                <h:panelGroup rendered="#{sessionController.institutionPreference.channelBillPaperType eq 'FiveFivePaper' and (sessionController.institutionPreference.applicationInstitution eq 'Ruhuna')}" >
+                                        <!--<ch:channelRecipt_ruhunu bill="#{channelBillController.billSession.billItem.bill}" dup="false"/>-->
+                                                    <ch:channelRecipt_ruhunu_new bill="#{channelBillController.printingBill}" dup="false" hos="true" />
+                                                    <ch:channelRecipt_ruhunu_new bill="#{channelBillController.printingBill}" dup="false" hos="false" />
                                                 </h:panelGroup>
                                             </div>
                                             <div >
