--- a/src/main/webapp/patient.xhtml
+++ b/src/main/webapp/patient.xhtml
@@ -81,8 +81,19 @@
                                 <f:ajax event="dateSelect" />
                             </p:calendar>
                         </h:panelGrid>
+                        <h:outputLabel value="Refering Doctor"/>
+                        <p:autoComplete forceSelection="true" id="cmbDoc" value="#{billController.bill.referredBy}" 
+                                        completeMethod="#{doctorController.completeDoctor}" var="ix" 
+                                        itemLabel="#{ix.person.name}" itemValue="#{ix}" size="30"  style="width: 400px;">
+                            <p:column headerText="Name" >
+                                <h:outputLabel value="#{ix.person.nameWithTitle}" ></h:outputLabel>
+                            </p:column>
+                            <p:column headerText="Code" >
+                                <h:outputLabel value="#{ix.code}" ></h:outputLabel>
+                            </p:column>
+                        </p:autoComplete>
 
-                        <p:commandButton value="Save" action="#{patientController.saveSelected()}" ajax="false" onclick="if (!confirm('Are you sure you want to save this record?'))
+                        <p:commandButton value="Save" action="#{patientController.saveSelected()}" actionListener="#{billController.updateReferingDoctor}" ajax="false" onclick="if (!confirm('Are you sure you want to save this record?'))
                                     return false;"></p:commandButton>
 
                         <p:watermark value="Please enter the name of the Patient" for="txtNewPtName" />
